--- a/manifest.json
+++ b/manifest.json
@@ -8,8 +8,7 @@
     "storage",
     "webNavigation",
     "webRequest",
-    "notifications",
-    "identity"
+    "notifications"
   ],
   "host_permissions": ["*://*/*"],
   "background": {
@@ -24,7 +23,7 @@
     "js": [
       "content.js",
       "features/cart.js",
-      "features/chat.js", 
+      "features/chat.js",
       "features/payments.js",
       "features/social.js",
       "features/analytics.js"
