Update manifest for recording feature

--- a/manifest.json
+++ b/manifest.json
@@ -2,75 +2,27 @@
   "manifest_version": 3,
   "name": "YoBuddy Shopping",
   "version": "2.0",
-  "description": "Complete social shopping platform",
+  "description": "Complete social shopping platform with session recording",
   "permissions": [
     "tabs",
     "storage",
     "webNavigation",
-    "webRequest",
-    "notifications",
-    "identity",
-    "bookmarks",
     "scripting",
-    "contextMenus",
-    "cookies",
-    "clipboardWrite"
+    "activeTab"
   ],
-  "host_permissions": [
-    "*://*/*",
-    "*://*.facebook.com/*",
-    "*://*.twitter.com/*",
-    "*://*.pinterest.com/*",
-    "*://*.amazon.com/*",
-    "*://*.ebay.com/*",
-    "*://*.walmart.com/*"
-  ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self' 'unsafe-eval' https://www.gstatic.com/ https://*.firebaseio.com https://apis.google.com https://connect.facebook.net https://platform.twitter.com; object-src 'self'"
-  },
-  "oauth2": {
-    "client_id": "YOUR_CLIENT_ID",
-    "scopes": [
-      "https://www.googleapis.com/auth/userinfo.profile",
-      "https://www.googleapis.com/auth/userinfo.email"
-    ]
+  "host_permissions": ["<all_urls>"],
+  "action": {
+    "default_popup": "popup.html"
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "service_worker": "background.js"
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": [
       "content.js",
-      "features/auth.js",
-      "features/cart.js",
-      "features/voice-chat.js",
-      "features/cursor-tracking.js",
-      "features/chat.js",
-      "features/payments.js",
-      "features/social.js",
-      "features/analytics.js",
-      "features/recommendations.js",
-      "features/advanced-search.js",
-      "features/notifications.js",
-      "features/theme-manager.js",
-      "features/bookmark-sync.js"
+      "features/session-recorder.js"
     ],
-    "css": ["styles/main.css"],
-    "run_at": "document_end"
+    "css": ["styles/main.css"]
   }]
 }
