--- a/manifest.json
+++ b/manifest.json
@@ -2,19 +2,20 @@
   "manifest_version": 3,
   "name": "YoBuddy Shopping",
   "version": "2.0",
-  "description": "Complete social shopping platform with session recording",
+  "description": "Collaborative shopping platform",
   "permissions": [
     "tabs",
     "storage",
     "webNavigation",
     "scripting",
-    "activeTab"
+    "activeTab",
+    "contextMenus"
   ],
-  "host_permissions": ["<all_urls>"],
-  "web_accessible_resources": [{
-    "resources": ["features/session-recorder.js"],
-    "matches": ["<all_urls>"]
-  }],
+  "host_permissions": [
+    "*://*.amazon.com/*",
+    "*://*.ebay.com/*",
+    "*://*.walmart.com/*"
+  ],
   "action": {
     "default_popup": "popup.html"
   },
@@ -24,9 +25,14 @@
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": [
-      "content.js",
-      "features/session-recorder.js"
+      "features/cursor-sharing.js",
+      "features/price-tracker.js",
+      "content.js"
     ],
     "css": ["styles/main.css"]
+  }],
+  "web_accessible_resources": [{
+    "resources": ["features/*"],
+    "matches": ["<all_urls>"]
   }]
 }
