--- a/manifest.json
+++ b/manifest.json
@@ -1,45 +1,29 @@
 {
   "manifest_version": 3,
-  "name": "YoBuddy Shopping",
-  "version": "2.0",
-  "description": "Complete collaborative shopping platform",
+  "name": "YoBuddy",
+  "version": "1.0.0",
+  "description": "A Chrome extension for synchronized browsing and shopping with friends",
   "permissions": [
-    "tabs",
-    "storage",
-    "webNavigation",
-    "scripting",
     "activeTab",
-    "contextMenus",
-    "desktopCapture",
-    "webRequest"
-  ],
-  "host_permissions": [
-    "*://*.amazon.com/*",
-    "*://*.ebay.com/*",
-    "*://*.walmart.com/*",
-    "*://*.bestbuy.com/*"
+    "storage"
   ],
   "action": {
     "default_popup": "popup.html"
   },
-  "background": {
-    "service_worker": "background.js"
-  },
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "js": [
-      "features/voice-chat.js",
-      "features/screen-recorder.js",
-      "features/deal-finder.js",
-      "features/product-comparison.js",
-      "features/cursor-sharing.js",
-      "features/price-tracker.js",
+      "js/VoiceChat.js",
+      "js/CommunicationHub.js",
+      "js/PaymentManager.js",
+      "js/SocialFeatures.js",
+      "js/AnalyticsTracker.js",
+      "js/AdminDashboard.js",
       "content.js"
     ],
-    "css": ["styles/main.css"]
+    "css": ["css/styles.css"]
   }],
-  "web_accessible_resources": [{
-    "resources": ["features/*"],
-    "matches": ["<all_urls>"]
-  }]
+  "background": {
+    "service_worker": "background.js"
+  }
 }
