--- a/manifest.json
+++ b/manifest.json
@@ -10,15 +10,10 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
-    }
+    "default_icon": "icon.png"
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
@@ -27,8 +22,9 @@
     ],
     "css": ["css/content.css"]
   }],
-  "web_accessible_resources": [{
-    "resources": ["images/*"],
-    "matches": ["<all_urls>"]
-  }]
+  "icons": {
+    "16": "icon.png",
+    "48": "icon.png",
+    "128": "icon.png"
+  }
 }
