--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,39 @@
-{"manifest_version":3,"name":"YoBuddy","version":"1.0.0","description":"Shop together with friends in real-time","permissions":["activeTab","storage","tabs"],"host_permissions":["https://*.herokuapp.com/*"],"content_security_policy":{"extension_pages":"script-src 'self' https://cdnjs.cloudflare.com; object-src 'self'"},"action":{"default_popup":"popup.html"},"background":{"service_worker":"background.js","type":"module"},"content_scripts":[{"matches":["<all_urls>"],"js":["socket.io.min.js","content.js"],"css":["content.css"]}],"web_accessible_resources":[{"resources":["*.css","*.js","*.html"],"matches":["<all_urls>"]}]}
+{
+  "manifest_version": 3,
+  "name": "YoBuddy",
+  "version": "1.0.0",
+  "description": "Shop together with friends in real-time using Firebase",
+  "permissions": [
+    "activeTab",
+    "storage",
+    "tabs"
+  ],
+  "host_permissions": [
+    "https://*.firebaseio.com/*"
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
+  "content_scripts": [{
+    "matches": ["<all_urls>"],
+    "js": ["content.js"],
+    "css": ["content.css"]
+  }]
+}
