Update manifest.json for Firebase integration

--- a/manifest.json
+++ b/manifest.json
@@ -1,39 +1,1 @@
-{
-  "manifest_version": 3,
-  "name": "YoBuddy",
-  "version": "1.0.0",
-  "description": "Shop together with friends in real-time using Firebase",
-  "permissions": [
-    "activeTab",
-    "storage",
-    "tabs"
-  ],
-  "host_permissions": [
-    "https://*.firebaseio.com/*"
-  ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
-    }
-  },
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
-  "background": {
-    "service_worker": "background.js",
-    "type": "module"
-  },
-  "content_scripts": [{
-    "matches": ["<all_urls>"],
-    "js": ["content.js"],
-    "css": ["content.css"]
-  }]
-}
+{\n  \"manifest_version\": 3,\n  \"name\": \"YoBuddy\",\n  \"version\": \"1.0.0\",\n  \"description\": \"Shop together with friends in real-time using Firebase\",\n  \"permissions\": [\n    \"activeTab\",\n    \"storage\",\n    \"tabs\"\n  ],\n  \"host_permissions\": [\n    \"https://*.firebaseio.com/*\"\n  ],\n  \"content_security_policy\": {\n    \"extension_pages\": \"script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'\"\n  },\n  \"action\": {\n    \"default_popup\": \"popup.html\",\n    \"default_icon\": {\n      \"16\": \"icons/icon16.png\",\n      \"48\": \"icons/icon48.png\",\n      \"128\": \"icons/icon128.png\"\n    }\n  },\n  \"icons\": {\n    \"16\": \"icons/icon16.png\",\n    \"48\": \"icons/icon48.png\",\n    \"128\": \"icons/icon128.png\"\n  },\n  \"background\": {\n    \"service_worker\": \"background.js\",\n    \"type\": \"module\"\n  },\n  \"content_scripts\": [{\n    \"matches\": [\"<all_urls>\"],\n    \"js\": [\"content.js\"],\n    \"css\": [\"content.css\"]\n  }]\n}
