--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   ],
   "action": {
     "default_popup": "popup.html",
-    "default_icon": "assets/icon.png"
+    "default_icon": "icon.png"
   },
   "background": {
     "service_worker": "background.js",
