--- a/manifest.json
+++ b/manifest.json
@@ -17,8 +17,7 @@
     "default_icon": "icon.png"
   },
   "background": {
-    "service_worker": "background.js",
-    "type": "module"
+    "service_worker": "background.js"
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
