--- a/manifest.json
+++ b/manifest.json
@@ -10,8 +10,12 @@
   ],
   "host_permissions": [
     "https://*.firebaseio.com/*",
-    "https://*.googleapis.com/*"
+    "https://*.googleapis.com/*",
+    "https://www.gstatic.com/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
