--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YoBuddy",
   "version": "1.0.0",
-  "description": "Shop together with friends in real-time using Firebase",
+  "description": "Shop together with friends in real-time",
   "permissions": [
     "activeTab",
     "storage",
@@ -11,11 +11,8 @@
   "host_permissions": [
     "https://*.firebaseio.com/*",
     "https://*.googleapis.com/*",
-    "https://cdnjs.cloudflare.com/*"
+    "https://www.gstatic.com/*"
   ],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self' https://cdnjs.cloudflare.com/; object-src 'self'"
-  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
