--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
     "https://*.googleapis.com/*",
     "https://www.gstatic.com/*"
   ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
+  },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
