--- a/manifest.json
+++ b/manifest.json
@@ -9,23 +9,21 @@
     "tabs"
   ],
   "host_permissions": [
-    "https://*.firebaseio.com/*",
-    "https://*.googleapis.com/*",
-    "https://www.gstatic.com/*"
+    "*://*/*"
   ],
   "content_security_policy": {
-    "extension_pages": "script-src 'self' 'wasm-unsafe-eval' https://www.gstatic.com/ https://*.firebaseio.com https://www.googleapis.com; object-src 'self'"
+    "extension_pages": "script-src 'self'; object-src 'self'"
   },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["content.js"],
-    "css": ["content.css"]
+    "js": ["content.js"]
   }]
 }
