--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,19 @@
   "name": "YoBuddy",
   "version": "1.0.0",
   "description": "Shop together with friends in real-time",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
   "permissions": [
     "activeTab",
     "storage",
@@ -12,15 +25,12 @@
     "https://*.firebaseio.com/*",
     "https://*.googleapis.com/*"
   ],
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "icon.png"
-  },
   "background": {
     "service_worker": "background.js"
   },
   "content_scripts": [{
     "matches": ["<all_urls>"],
-    "js": ["content.js"]
+    "js": ["content.js"],
+    "css": ["content.css"]
   }]
 }
